# frontend_wasm

./: Cargo.toml  index.html
css/: esdh.css
src/: data_struct.rs  lib.rs  page.rs
src/common/: common.rs
src/page/: datasets.rs  home.rs  users.rs
