[package]
name = "nnedl_wasm"
version = "0.1.0"
authors = ["Steen Larsen <sla@keycore.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.8.0"
chrono = "0.4.15"
ulid = "0.4.0"
serde = "1.0.115"
wasm-bindgen-futures = "0.4.17"
serde-wasm-bindgen = "0.1.3"
cynic = "0.10.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
